--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <img src="a1.png" alt="">
         </div>
         <div class="content">
-            <h2> <span1>🖐 Hi,</span1><br> Everyone I am Ankit Thalwal a Frontent Developer <br> and a Graphic Designer</h2>
+            <h2> <span1>🖐 Hi,</span1><br> Everyone I am Ankit Thalwal a Frontend Developer <br> and a Graphic Designer</h2>
             <p>I am passionate about web development and Designing</p>
         </div>
     </div>
